plugins/security/rate-limiting-adv/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiting-adv-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: rate-limiting-adv-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /rate-limit-adv
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
